RESOLVED FIXED87688
Floats wraps incorrectly when top edge has subpixel precision
https://bugs.webkit.org/show_bug.cgi?id=87688
Summary Floats wraps incorrectly when top edge has subpixel precision
Shinya Kawanaka
Reported 2012-05-28 18:58:59 PDT
In the following repro, "hello" and "world" should not be over-wrapped. However they do. Repro: <html> <head> <!-- GOOD when round(padding-top) = floor(padding-top) BAD when round(padding-top) = ceil(padding-top) --> <style> body { padding-top: 0.6px; } div { float: left; } </style> </head> <body> <div>hello</div> <div>world</div> </body> </html>
Attachments
WIP (13.80 KB, patch)
2012-05-29 00:54 PDT, Shinya Kawanaka
no flags
Archive of layout-test-results from ec2-cr-linux-04 (786.33 KB, application/zip)
2012-05-29 03:22 PDT, WebKit Review Bot
no flags
Patch (51.06 KB, patch)
2012-05-30 11:44 PDT, Emil A Eklund
no flags
Patch for landing (52.38 KB, patch)
2012-05-30 12:05 PDT, Emil A Eklund
no flags
Patch for landing (60.13 KB, patch)
2012-05-30 12:27 PDT, Emil A Eklund
no flags
Shinya Kawanaka
Comment 1 2012-05-29 00:54:36 PDT
WebKit Review Bot
Comment 2 2012-05-29 00:57:07 PDT
Attachment 144467 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/WebCore/rendering/RenderBlock.cpp:3979: Should have a space between // and comment [whitespace/comments] [4] Source/WebCore/rendering/RenderBlock.cpp:3981: Should have a space between // and comment [whitespace/comments] [4] Source/WebCore/rendering/RenderBlock.cpp:3987: Should have a space between // and comment [whitespace/comments] [4] Source/WebCore/rendering/RenderBlock.cpp:3991: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 4 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Shinya Kawanaka
Comment 3 2012-05-29 00:59:50 PDT
If a lot of rebaseline aren't necessary, I'll polish the patch. If so, maybe I should re-consider how to fix this issue.
WebKit Review Bot
Comment 4 2012-05-29 03:22:55 PDT
Comment on attachment 144467 [details] WIP Attachment 144467 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12838564 New failing tests: css2.1/t0905-c414-flt-wrap-00-e.html fast/block/float/016.html fast/backgrounds/background-position-parsing.html fast/multicol/span/span-as-immediate-columns-child.html fast/backgrounds/size/contain-and-cover-zoomed.html
WebKit Review Bot
Comment 5 2012-05-29 03:22:58 PDT
Created attachment 144501 [details] Archive of layout-test-results from ec2-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Emil A Eklund
Comment 6 2012-05-30 11:27:02 PDT
Thanks for the minimal repro Shinya Kawanaka. The actual fix for this bug is actually a lot simpler though :)
Emil A Eklund
Comment 7 2012-05-30 11:44:02 PDT
Levi Weintraub
Comment 8 2012-05-30 11:59:33 PDT
Comment on attachment 144883 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=144883&action=review > Source/WebCore/rendering/RenderBlock.cpp:3968 > + FloatIntervalSearchAdapter<FloatingObject::FloatLeft> adapter(this, logicalTop.round(), left, heightRemaining); Why not roundToInt()? > LayoutTests/ChangeLog:14 > + * fast/sub-pixel/float-wrap-with-subpixel-top-expected.html: Added. > + * fast/sub-pixel/float-wrap-with-subpixel-top.html: Added. Skip this test on platforms without sub-pixel layout. > LayoutTests/ChangeLog:17 > + * platform/chromium-linux/fast/backgrounds/background-position-parsing-expected.png: > + * platform/chromium-linux/fast/backgrounds/background-position-parsing-expected.txt: > + * platform/chromium-win/fast/multicol/span/span-as-immediate-columns-child-expected.txt: Will these turn Mac bots red? You can mark these as optionally failing on Chromium-Mac then run the rebaseline tool to verify.
Emil A Eklund
Comment 9 2012-05-30 12:05:21 PDT
Created attachment 144889 [details] Patch for landing
Emil A Eklund
Comment 10 2012-05-30 12:27:54 PDT
Created attachment 144894 [details] Patch for landing
Emil A Eklund
Comment 11 2012-05-30 14:46:20 PDT
Comment on attachment 144894 [details] Patch for landing The patch will conflict with r118975 that was just landed so I'll land this manually.
Emil A Eklund
Comment 12 2012-05-30 14:56:50 PDT
Note You need to log in before you can comment on or make changes to this bug.