Floats wraps incorrectly when top edge has subpixel precision https://bugs.webkit.org/show_bug.cgi?id=87688

Reviewed by Levi Weintraub.

When computing the logical left and right offsets for a float we
incorrectly floored the logical top when passing it to the float search
adapter. This caused it to return incorrect values where the floored and
pixel snapped values are not the same.

Source/WebCore:

Test: fast/sub-pixel/float-wrap-with-subpixel-top.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::logicalLeftOffsetForLine):
(WebCore::RenderBlock::logicalRightOffsetForLine):

LayoutTests:

* fast/sub-pixel/float-wrap-with-subpixel-top-expected.html: Added.
* fast/sub-pixel/float-wrap-with-subpixel-top.html: Added.
* platform/chromium-linux/fast/backgrounds/background-position-parsing-expected.png:
* platform/chromium-linux/fast/backgrounds/background-position-parsing-expected.txt:
* platform/chromium-win/fast/multicol/span/span-as-immediate-columns-child-expected.txt:
* platform/chromium/test_expectations.txt:
* platform/efl/Skipped:
* platform/gtk-wk2/Skipped:
* platform/mac-lion/Skipped:
* platform/mac-snowleopard/Skipped:
* platform/mac-wk2/Skipped:
* platform/mac/Skipped:
* platform/qt-4.8/Skipped:
* platform/qt/Skipped:
* platform/win-wk2/Skipped:
* platform/win-xp/Skipped:
* platform/win/Skipped:
* platform/wincairo/Skipped:
* platform/wk2/Skipped:


Canonical link: https://commits.webkit.org/105701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118978 268f45cc-cd09-0410-ab3c-d52691b4dbfc